# romea-core-path

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_path.repos  romea_path.repos.public  romea_path.rosinstall
cmake/: romea_core_pathConfig.cmake.in
include/romea_core_path/: CumulativeSum.hpp  Path2D.hpp  PathAnnotation.hpp  PathCurve2D.hpp  PathFile.hpp  PathFrenetPose2D.hpp  PathMatchedPoint2D.hpp  PathMatching2D.hpp  PathPosture2D.hpp  PathSection2D.hpp  PathSectionMatching2D.hpp  PathWayPoint2D.hpp
include/romea_path/: Path2D.hpp  PathCurve2D.hpp  PathFrenetPose2D.hpp  PathMatchedPoint2D.hpp  PathMatching2D.hpp  PathSection2D.hpp
src/: Path2D.cpp  PathAnnotation.cpp  PathCurve2D.cpp  PathFile.cpp  PathFrenetPose2D.cpp  PathMatchedPoint2D.cpp  PathMatching2D.cpp  PathPosture2D.cpp  PathSection2D.cpp  PathSectionMatching2D.cpp  PathWayPoint2D.cpp
test/: CMakeLists.txt  test_cumulative_sum.cpp  test_curve2d.cpp  test_curvilinear_abscissa.cpp  test_path.cpp  test_path_matching.cpp  test_section.cpp  test_section_matching.cpp  test_utils.hpp
test/data/: path11.txt  path12.txt  path13.txt  path21 .txt  path22.txt  path23.txt  section.txt
